Ensure existing mlog representation of numeric literals and constant expressions